Updated Foot Scan details on index page and fixed overlap of orthotics image on 992 screen size

--- a/css/styles.css
+++ b/css/styles.css
@@ -10995,7 +10995,7 @@ header.masthead h1, header.masthead .h1 {
 }
 @media (min-width: 992px) {
   header.masthead {
-    height: 100vh;
+    height: 125vh;
     min-height: 40rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
